[package]
name = "smartlink-websocket-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.25.0", features = ["full"] }
tokio-tungstenite = "0.19.0"
futures-util = "0.3.28"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
chrono = { version = "0.4.24", features = ["serde"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"